--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,4 +1,8 @@
-body { background-color: #fff; color: #333; }
+body { 
+  background-color: #ddd; 
+  color: #333
+  padding:30px; 
+}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
