--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-<h2>"Another app called rat"</h2>
+<h2>Another app called rat</h2>
 <%= yield %>
 
 </body>
