--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -2,7 +2,7 @@ body {
   background-color: #ddd; 
   color: #333
   padding:30px;
-  margin: auto; 
+  margin: 0px auto; 
 }
 
 body, p, ol, ul, td {
