--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,7 +1,8 @@
 body { 
   background-color: #ddd; 
   color: #333
-  padding: 100px 30px;
+  padding-left: 150px;
+  padding-top: 50px;
   margin: 0px auto; 
 }
 
