--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Rat</title>
-  <%= stylesheet_link_tag :all %>
+  <link rel="stylesheet" type="text/css" href="public/spreadsheets/scaffold.css"  />
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
