--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 <div id="box">
 <h2>Another app called Rat2</h2>
+<p>The place where all the best cats are created</p>
 <%= yield %>
 </div>
 </body>
