--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="box">
-<h1>Welcome"
+<h1>Welcome</h1>
 <h2>Another app called Rat2</h2>
 <p>The place where all the best cats are created</p>
 <%= yield %>
